--- a/github-user-card/src/index.css
+++ b/github-user-card/src/index.css
@@ -5,6 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+    /* background-image: linear-gradient(rgb(163, 154, 154), red); */
+    background-color: darkred;
 }
 
 code {
